# USBscope

./: .gitignore  CMakeLists.txt  HACKING.md  README.md
data/: org.cachyos.USBscope1.xml  usbscope-ui.desktop  usbscoped.service
packaging/: PKGBUILD
src/core/: dbus_helpers.cpp  dbus_helpers.h  icon_helpers.cpp  icon_helpers.h  usbtypes.cpp  usbtypes.h
src/daemon/: dbus_adaptor.cpp  dbus_adaptor.h  journaltail.cpp  journaltail.h  main_daemon.cpp  usbdaemon.cpp  usbdaemon.h  usbmonitor.cpp  usbmonitor.h
src/gui/: icon_helpers.cpp
src/tray/: main_tray.cpp  trayicon.cpp  trayicon.h
src/ui/: aboutdialog.cpp  aboutdialog.h  eventmarker.cpp  eventmarker.h  main_ui.cpp  mainwindow.cpp  mainwindow.h  timelinescene.cpp  timelinescene.h  timelineview.cpp  timelineview.h
